2001-04-07  Thomas Kirk  <tk@research.att.com>

	* kawa/standard/load.java(loadCompiled): Avoid leaking 
	zipfiles by calling new method ZipLoader.loadAllClasses, which
	reads all classes immediately so that zipfile can be closed, 

2001-03-22  Per Bothner  <per@bothner.com>

	* Make-rules:  Various tweaks.
	If compiling .class to native, no longer need to make classes.jar.
	(install-java-classes):  New rule.
	* Makefile.am (SUBDIRS):  Added new bin directory.
	(KAWA1_OFILES, kawa1$(exeext)):  Moved to bin/Makefile.am.
	* configure.in:  (AC_OUTPUT):  Add bin/Makefile.
	If --enable-gcj-compiled, default JAVA and JAVAC to gij and gcj.
	* bin:  New sub-directory.
	* kawa/kawa.c:  Moved to new bin directory.
	* kawa/Makefile.am:  Moved stuff to bin/Makefile.am.
 	
	* repl.java (checkInitFile):  Set home-directory variable *before*
	running init file.

	* Shell.java (run):  Fix logic for EOF testing,

2001-03-08  Per Bothner  <per@bothner.com>

	Many changes to handlenew gnu.lists package.
	* Make-rules (CLEANFILES):  New definition.
	* configure.in:  Handle --with-java-collection flag.

	* kawa/Shell.java, kawa/repl.java:
  	Import gnu.lists instead of gnu.kawa.util.
	* kawa/lang/{AutoloadSyntax.java,CompileFile.java,Eval.java,
	Lambda.java,ListPat.java,ListRepeatPat.java,Macro.java,PairPat.java,
	Quote.java,Record.java,RecordConstructor.java,Syntax.java,
	SyntaxRule.java,SyntaxRules.java,Translator.java,VarListPat.java}:
	Likewise.  Also, use LList.listLength instead of LList.length.
	* kawa/standard/{and_or.java,append.java,begin.java,
	call_with_output_string.java,cxr.java,define.java,define_alias.java,
	define_autoload.java,define_class.java,define_member_alias.java,
	define_syntax.java,define_unit.java,define_variable.java,export.java,
	fluid_let.java,let.java,let_syntax.java,letrec.java,load.java,
	location.java,map.java,module_extends.java,module_implements.java,
	module_name.java,module_static.java,object.java,prim_method.java,